# mindloom

./: .gitignore  .windsurfrules  PRD.md  README.md  TASK_LIST.md  TASK_LIST_POD.md  create_user.sh  docker-compose.yml  test_agent_workflow.sh
api/: teams.ts
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b4dd158c7f8_create_agent_variables_table.py  3420b791a6a9_add_team_content_bucket_association_.py  3c1a90b7d0ae_create_agents_table.py  4f87f07ee442_create_users_table.py  6cdffa015b80_create_run_artifacts_table.py  6ef0542e654b_create_team_agent_association_table.py  8440b7012bcb_create_teams_table_and_association.py  8632dc72f6c1_create_agent_schedules_table.py  a1d5e7f77afd_fix_relationships_between_users_and_.py  a613b4c1b88f_add_role_column_to_users_table.py  a65dc41f3700_create_run_logs_table.py  bd389c217b70_create_runs_table.py  ec7de2feabf4_add_department_column_to_users_table.py
backend/src/mindloom/: dependencies.py  main.py
backend/src/mindloom/app/api/v1/: __init__.py  api.py
backend/src/mindloom/app/api/v1/endpoints/: agents.py  auth.py  content_buckets.py  runs.py  teams.py
backend/src/mindloom/app/middleware/: error_handling.py
backend/src/mindloom/app/models/: __init__.py  agent.py  agent_content_bucket.py  content_bucket.py  file_metadata.py  run.py  team.py  team_content_bucket.py  token.py  user.py
backend/src/mindloom/core/: config.py  security.py
backend/src/mindloom/db/: association_tables.py  base.py  base_class.py  session.py
backend/src/mindloom/execution/: Dockerfile  run_executor.py
backend/src/mindloom/services/: agents.py  content_buckets.py  exceptions.py  redis.py  runs.py  teams.py  utils.py
backend/src/mindloom/tools/: github.py  jira.py
docs/: DESIGN.md  README.md  database-schema.md  execution_flow.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
xdocs/: agent_example.py  agno_agent.py  agno_knowledge_agent.py  (+8 more)
(+77 files in other folders)
