[project]
name = "mindloom"
version = "0.1.0"
description = "Backend API for the Mindloom platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0", # Core web framework
    "uvicorn[standard]>=0.29.0", # ASGI server
    "sqlalchemy", # Added ORM
    "asyncpg", # Added PostgreSQL async driver
    "alembic", # Added migrations tool
    "python-jose[cryptography]", # Added JWT
    "passlib[bcrypt]", # Added password hashing
    "pydantic", # Added pydantic settings
    "pydantic[email]", # Added email validation
    "greenlet", # Added greenlet for async support
    "agno>=1.4.2",
    "openai", # Required by agno for OpenAI integrations
    "azure-ai-inference", # Required by agno for Azure AI models
    "aiohttp", # Required by azure-ai-inference
    "pgvector", # Required by agno for PgVector integration
    "langchain-core", # Required for Document objects
    "boto3", # Required for AWS S3 interaction
    "langchain-community", # Required for document loaders
    "redis", # Required for Redis memory storage
    "croniter", # Required for cron schedule validation
    "kubernetes", # Required for interacting with K8s API
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["uv>=0.1.18", "uv_build"]
build-backend = "uv_build"

[project.scripts]
mindloom = "src.main:app"

[tool.uv.sources]
mindloom = { path = "mindloom" }
